--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+  
 *{
     padding:0;
     margin:0;
@@ -12,12 +13,14 @@ body{
     display: none;
     height: 100%;
     width:100%;
-    /* background-color: #060AB2; */
-    /* background:linear-gradient(#060AB2,white); */
+    /* background-color: #FF3CAC;
+    background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
+     */
+     background-image: radial-gradient( circle farthest-corner at 83.7% 4.3%,  rgba(173,0,171,1) 0%, rgb(27, 77, 134) 90% );   
+    
 }
 .memory-game{
     display: none;
-    
     height: 640px;
     width: 640px;
     display:none;
@@ -47,7 +50,7 @@ transition: transform 0.5s;
 .font-face,.back-face{
     width:100%;
     height: 100%;
-    /* padding:1rem; */
+    padding:0.5rem;
     position: absolute;
     border-radius: 5px;
     backface-visibility: hidden;
@@ -157,6 +160,15 @@ button.play{
 .game-over-content button {
     margin-top: 10px;
 }
+.selected{
+    background-color: red;
+    position: relative; /* transition: animation 0.4s ease-in; */
+    animation-name: shake;
+    animation-duration:0.1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+}
+
 @keyframes fadeIn {
     from {opacity: 0} 
   to {opacity: 1}
@@ -165,4 +177,12 @@ button.play{
     from {bottom: -300px; opacity: 0}
     to {bottom: 0; opacity: 1}
 
+}
+@keyframes shake{
+    0% {left:0px;
+    }
+    25% {left:2px;}
+    50%{left:5px;}
+    75% {right:-5px}
+    100%{right:-2px}    
 }
